----------------------------------
    -- 2.3.0.1 - 12/28/2024 --

- fixed "ghost beats" caused by dragging them around the track
- fixed bezier nodes not updating properly when adjusting their corresponding notes
- fixed ini importing not clearing map objects before adding new ones
- importing map objects from an ini can now be undone

----------------------------------
    -- 2.3.0.0 - 12/28/2024 --

- updated to .NET 8.0
  > this means smaller file sizes and potentially better performance, plus support for future versions of OpenTK
  > you may need to update your installed .NET version, sorry about that

- NEW MAP OBJECT SYSTEM (just one new object for now)!
  > map objects can be edited via a window under the 'OPTIONS' tab
  > additional objects may be added in the future as they gain support elsewhere; youre welcome to suggest new object types!

- added a setting to disable anti-aliasing for better performance on older hardware
- heavily optimized rendering the track and grid
- optimized copying/pasting/deleting notes
- fixed a memory leak
- fps is now capped to 15 when not focused on the editor to conserve resources
- save on close prompts no longer reload the map's audio, which will improve closing times with unsaved maps
  > pressing 'Cancel' will now send you back to the menu instead of staying on the current map

- fixed being unable to click a note outside the grid's borders
- fixed text scaling going wild with non-16:9 aspect ratios
- fixed a crash caused by overlapping grid keybinds
- fixed commas in imported audio files causing file load errors
- fixed fullscreen viewport size when not on a 1080p monitor
- fixed some dragging bugs causing selected notes to teleport
- improved waveform consistency and sync
- modified map load error messages
- modified the crash report possible fixes list

- added support for Phoenyx (import), Nova (import/export), and Pulsus (import)